--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -2,9 +2,9 @@
 
 <ul class="social social--@position js-social--@position u-unstyled u-cf" data-component="social">
     @sharelinks.visible.map { link => @ShareLink(Nil, link) }
-    @sharelinks.hidden.fold(Html("")){ hiddenLinks =>
+    @if(sharelinks.hidden.isEmpty) { Html("") } else {
         @SocialMore
-        @hiddenLinks.map { link => @ShareLink(List("social--hidden", "social__secondary"), link) }.toList
+        @sharelinks.hidden.map { link => @ShareLink(List("social--hidden", "social__secondary"), link) }
     }
     @SaveForLater
     @CloseTray
