--- a/common/app/views/fragments/commercial/logo.scala.html
+++ b/common/app/views/fragments/commercial/logo.scala.html
@@ -19,7 +19,7 @@
 }
 
 @branding.label
-<a class="badge__link" href="@branding.sponsorLink" data-link-name="logo link">
+<a class="badge__link" href="@branding.sponsorLink" data-sponsor="@branding.sponsorName">
     @if(request.isAmp) {
         @if(onDarkBackground && branding.highContrastSponsorLogo.nonEmpty) {
             @for(highContrastLogo <- branding.highContrastSponsorLogo) {
