remove request from logo fragment

--- a/article/app/views/fragments/logo.scala.html
+++ b/article/app/views/fragments/logo.scala.html
@@ -1,4 +1,4 @@
-@(amp: Boolean = false)(implicit request: RequestHeader)
+@(amp: Boolean = false)
 
 @if(amp) {
     @* AMP doesn't support sameAs *@
