--- a/common/app/views/fragments/inlineJSBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSBlocking.scala.html
@@ -1,7 +1,7 @@
 @import common.InlineJs
 @import conf.switches.Switches.{AsyncCss, FontSwitch, ElectionAppDelay}
 @import model.Page.getContent
-@import templates.inlineJS.blocking.js.{applyRenderConditions, cloudwatchBeacons, config, curlConfig, enableStylesheets, loadFonts, shouldEnhance}
+@import templates.inlineJS.blocking.js.{applyRenderConditions, config, curlConfig, enableStylesheets, loadFonts, shouldEnhance}
 @import templates.inlineJS.blocking.polyfills.js.{classlist, details, matches, raf, setTimeout}
 
 @(page: model.Page)(implicit request: RequestHeader)
@@ -90,10 +90,4 @@
             @loadApp
         }
     }
-
-
-    // ************* CLOUDWATCH BEACONS *************
-
-
-    @InlineJs(cloudwatchBeacons(page.metadata).body, "cloudwatchBeacons.js")
 </script>
