Reduce max width for front email

--- a/common/app/views/fragments/email/stylesheets/front.scala.html
+++ b/common/app/views/fragments/email/stylesheets/front.scala.html
@@ -60,4 +60,27 @@
     .headline .icon {
         height: 0.8em;
     }
+
+
+    /* Reduce max width */
+
+    table.twelve {
+        width: 500px;
+    }
+
+    table.twelve center {
+        min-width: 500px;
+    }
+
+    .block-grid {
+        max-width: 500px;
+    }
+
+    center {
+        min-width: 500px;
+    }
+
+    table.container {
+        width: 500px;
+    }
 </style>
