fix hosted article inline css

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -29,10 +29,7 @@
         color: @{page.campaign.fontColour.hexCode};
     }
 
-    .hosted-page ~ .survey-overlay-simple .
-
-
-    survey-text__header {
+    .hosted-page ~ .survey-overlay-simple .survey-text__header {
         background-color: @{page.campaign.fontColour.hexCode};
     }
 
