load interactives inline in interactiveBody

--- a/applications/app/views/fragments/interactiveBody.scala.html
+++ b/applications/app/views/fragments/interactiveBody.scala.html
@@ -68,7 +68,7 @@
         </div>
     }
 
-    @if(WebpackTest.isParticipating) {
+    @if(!WebpackTest.isParticipating) {
         <script>
             @HtmlFormat.raw(common.Assets.js.curl)
 
