--- a/common/app/views/fragments/inlineJSNonBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSNonBlocking.scala.html
@@ -30,7 +30,8 @@
 @if(WebpackTest.isParticipating &&
     (
         page.metadata.contentType == "Article" ||
-        page.metadata.contentType == "LiveBlog"
+        page.metadata.contentType == "LiveBlog" ||
+        page.metadata.contentType == "Interactive"
     )
 ) {
 
